# Web-server-Report

./: .dockerignore  .env  .env.example  .env.railway  .gitattributes  .gitignore  .nixpacksignore  .railwayignore  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  COINMARKETCAP_SETUP.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_GUIDE.md  DOCKER_TROUBLESHOOTING.md  DSD_FIXES_SUMMARY.md  Dockerfile  Dockerfile.alpine  Dockerfile.backup  Dockerfile.chef  Dockerfile.optimized  Dockerfile.railway  Dockerfile.secure  Dockerfile.simple  Dockerfile.simple-railway  Dockerfile.ubuntu  Dockerfile.ultra-simple  Dockerfile.unlocked  FRONTEND_BACKEND_INTEGRATION_UPDATE.md  IMPLEMENTATION_SUMMARY.md  LAYER2_EXTERNAL_SERVICES_COMPLETE.md  LAYER5_VIA_LAYER3_INTEGRATION_UPDATE.md  LEGACY_STATE_ELIMINATION_COMPLETE.md  MEMORY_FIX_SUMMARY.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  NEW_ARCHITECTURE.md  (+44 more)
.agents/rules/: web-server.md
.agents/workflows/: web-server.md
.cargo/: config  config.toml
.github/workflows/: deploy.yml  rust-cd.yml
archive_old_code/: ARCHITECTURE_COMPARISON.md  models.rs  state.rs  utils.rs
archive_old_code/handlers/: api.rs  cache.rs  crypto.rs  websocket.rs
crypto_dashboard/assets/: manifest.json  sw.js
crypto_dashboard/templates/: index.html  pdf_template.html  report_list.html  upload.html
dashboards/: home.html
deploy/: DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.alpine  Dockerfile.fixed  Dockerfile.minimal  Dockerfile.nightly  Dockerfile.pinned  Dockerfile.railway  Dockerfile.simple  Dockerfile.ubuntu  Procfile  README.md  nixpacks.toml  railway.json
docs/: BUILD_SYSTEM.md  CACHE_ARCHITECTURE.md  CACHE_ARCHITECTURE_ANALYSIS.md  CLONED_ANALYSIS_FETCH_NORMALIZED_DATA.md  CLONE_ANALYSIS_LAYER2_ADAPTERS_WEBSOCKET.md  CLONE_ANALYSIS_MARKET_DATA_ADAPTER.md  CLONE_ANALYSIS_MARKET_DATA_STREAMER.md  CLONE_PERFORMANCE_ANALYSIS.md  CLOUDFLARE_WEBSOCKET_COMPATIBILITY.md  CRYPTO_REPORTS_ARCHITECTURE.md  DASHBOARD_AUTO_LOADING_SUMMARY.md  DECLARATIVE_SHADOW_DOM.md  DEPLOYMENT_FINAL.md  DSD_IMPLEMENTATION_SUMMARY.md  FINNHUB_INTEGRATION.md  GENERIC_CACHE_ARCHITECTURE.md  INTELLIGENT_RATE_LIMITING.md  LANGUAGE_TOGGLE_API.md  LANGUAGE_TOGGLE_QUICKSTART.md  LAYER_ARCHITECTURE_FIX.md  MARKET_DATA_ADAPTER_OPTIMIZATION_SUMMARY.md  MARKET_DATA_API_ENHANCEMENT.md  MARKET_DATA_STREAMER_IMPROVEMENTS_SUMMARY.md  MEMORY_CLEANUP_AUDIT.md  MEMORY_CLEANUP_DIAGRAM.txt  MEMORY_LIMITS_PRODUCTION.md  MIGRATION_PLAN_REDIS_STREAMS.md  OPTIMIZED_MARKET_DATA_FLOW.md  OPTIONAL_IMPROVEMENTS_SUMMARY.md  PHASE1_PROGRESS_REPORT.md  PHASE2_PROGRESS_REPORT.md  PHASE3_COMPLETE.md  PHASE3_FINAL_SUCCESS.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_TROUBLESHOOTING.md  RATE_LIMITING_FIX.md  RATE_LIMITING_OPTIMIZATION_COMPLETE.md  (+12 more)
docs/ai_migration/: API_INTERFACES_SPEC.md  BUSINESS_LOGIC_RATE_LIMITING.md  CACHE_ARCHITECTURE_SPEC.md  DIRECTORY_STRUCTURE.md  FEATURE_DISCOVERY_MAP.md  TEMPLATE_SYSTEM_SPEC.md  WEBSOCKET_SYSTEM_SPEC.md
docs/archive/: CRYPTO_REPORTS_COMPLETE.md  DASHBOARD_EXTRACTION_COMPLETE.md  EMPTY_DIRECTORIES_CLEANUP.md  LANGUAGE_TOGGLE_ARCHITECTURE.md  LANGUAGE_TOGGLE_INDEX.md  README.md
examples/: backward_compatibility_demo.rs  cache_stampede_demo.rs  http_load_benchmark.rs  performance_benchmark.rs  test-memory-cleanup.sh  test-websocket-cloudflare.sh  test-websocket.sh  test_api_aggregator_new_fields.rs  test_coinmarketcap_fallback.rs  test_end_to_end_integration.rs  test_fallback_behavior.rs  test_fallback_scenarios.rs  test_finnhub_integration.rs  test_forced_fallback.rs  test_layer3_market_adapter.rs  test_layer5_business_logic.rs  test_layer5_via_layer3.rs  test_market_data_new_fields.rs
proto/: market_data.proto
scripts/: ai_migration_phase1.sh  deploy_railway.sh  dev.sh  migrate_to_crypto_dashboard.sh  performance_benchmark.sh  run-optimized.sh  simple_rps_test.sh  stress_test.sh  test_db_connection.sh
shared_assets/: translations.js
shared_assets/crypto-logos/: LICENSE.md
shared_assets/css/: PHASE2_COMPLETE.md  colors.css  report.css  style.css
shared_assets/images/: README.md
shared_components/: pdf_iframe.html  view_iframe.html  view_shadow_dom.html  websocket-dashboard.js
shared_components/core/: language-toggle.js  theme-manager.js
shared_components/market-indicators/: README.md  REFACTOR_GUIDE.md  market-indicators-modular.js  market-indicators.css  market-indicators.html  market-indicators.js  (+1 more)
src/: assets.rs  cache.rs  data_service.rs  error.rs  handlers.rs  handlers_backup.rs  lib.rs  main.rs  models.rs  performance.rs  routes.rs  state.rs  stream.rs  websocket_service.rs
static/: auto_update.html  game.html  home.html  upload.html
templates/: auto_update.html  index.html  pdf_template.html  report_list.html  upload.html
tests/: api_routes.rs  frontend_routes.rs  test-fontawesome.html  test_grpc_integration.rs
(+235 files in other folders)
