[package]
name = "web-server-report"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-server-report"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 4

[dependencies]
axum = "0.6"
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tera = "1.19"
