[package]
name = "web-server-report"
version = "0.1.0"
edition = "2021"
default-run = "web-server-report"

[[bin]]
name = "web-server-report"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 4

# Enable static linking for musl
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.28", features = ["full", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tera = "1.19"
# Redis dependencies - Updated to latest version
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
# HTTP client dependencies
reqwest = { version = "0.11", features = ["json"] }
# Concurrency và parallelism dependencies
rayon = "1.8"          # Data parallelism cho CPU-intensive tasks
dashmap = "5.5"        # Thread-safe HashMap
num_cpus = "1.16"      # Detect số cores CPU
futures = "0.3"        # Async utilities cho concurrent operations
