[package]
name = "web-server-report"
version = "0.1.0"
edition = "2021"
default-run = "web-server-report"
license = "Apache-2.0"
authors = ["thichuong"]

[lib]
name = "web_server_report"
path = "src/lib.rs"

[[bin]]
name = "web-server-report"
path = "src/main.rs"

# Optimized development profile - faster compile + good performance
[profile.dev]
opt-level = 1              # Some optimization for better runtime performance
debug = true               # Keep debug info for development
lto = false               # No LTO for faster compile time
codegen-units = 16        # Parallel compilation
panic = "unwind"          # Allow debugging panics
overflow-checks = true    # Keep safety checks in dev

[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"               # Full Link Time Optimization
codegen-units = 1         # Single codegen unit for better optimization  
panic = "abort"           # Abort on panic (smaller binary, faster)
strip = true             # Strip debug symbols
overflow-checks = false   # Disable overflow checks in release

# Enable static linking for musl
# [target.x86_64-unknown-linux-musl]
# rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.28", features = ["full", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tera = "1.19"
# Redis dependencies - Updated to latest version
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
# HTTP client dependencies
reqwest = { version = "0.11", features = ["json"] }
# Concurrency và parallelism dependencies
rayon = "1.8"          # Data parallelism cho CPU-intensive tasks
dashmap = "5.5"        # Thread-safe HashMap
num_cpus = "1.16"      # Detect số cores CPU
# Cache dependencies - Multi-tier cache system
multi-tier-cache = "0.5.1"  # Unified cache library with type-safe database caching
moka = { version = "0.12", features = ["future"] }  # L1 In-memory cache (for backward compatibility)
bb8-redis = "0.15"     # Redis connection pool for L2 cache (legacy)

# Constraint problematic dependencies
base64ct = "=1.6.0"    # Pin to avoid edition2024 requirement
futures = "0.3"        # Async utilities cho concurrent operations
# Performance optimization dependencies
lazy_static = "1.4"    # Static initialization
threadpool = "1.8"     # Dedicated thread pool cho CPU tasks
parking_lot = "0.12"   # Fast synchronization primitives
ahash = "0.8"         # Faster hash function
smallvec = "1.11"     # Stack-allocated vectors
rand = "0.9.2"
# Compression dependencies
flate2 = "1.0"        # Gzip compression
# Text processing
regex = "1.10"        # Regular expressions for content sanitization
